@@ -840,7 +840,11 @@ namespace Quartz.Impl.AdoJobStore
                 AddCommandParameter(cmd, "triggerName", trigger.Name);
                 AddCommandParameter(cmd, "triggerGroup", trigger.Group);
                 AddCommandParameter(cmd, "triggerCronExpression", trigger.CronExpressionString);
+#if NET_35
                 AddCommandParameter(cmd, "triggerTimeZone", trigger.TimeZone.Id);
+#else
+                AddCommandParameter(cmd, "triggerTimeZone", null);
+#endif
 
                 return cmd.ExecuteNonQuery();
             }
@@ -1635,6 +1639,11 @@ namespace Quartz.Impl.AdoJobStore
                                             {
 #if NET_35
                                                 timeZone = TimeZoneInfo.FindSystemTimeZoneById(timeZoneId);
+#else
+                                                if (logger.IsWarnEnabled)
+                                                {
+                                                    logger.WarnFormat("Trigger name: {0} and group: {1} had time zone specified in database but this build does not support TimeZones. TimeZone ignored", triggerName, groupName);
+                                                }
 #endif
                                             }
                                             ct = new CronTrigger(triggerName, groupName, jobName, jobGroup, startTimeD, endTimeD, cronExpr, timeZone);
